third_party/move/move-compiler-v2/tests/lambda/inline-parity/same_names.lambda.exp
// -- Model dump before bytecode pipeline
module 0x42::a {
    struct MyList {
        len: u64,
    }
    public fun len(self: &MyList): u64 {
        select a::MyList.len<&MyList>(self)
    }
} // end 0x42::a
module 0x42::b {
    struct MyOtherList {
        len: u64,
    }
    public fun len(self: &MyOtherList): u64 {
        select b::MyOtherList.len<&MyOtherList>(self)
    }
} // end 0x42::b
module 0x42::c {
    use 0x42::a; // resolved as: 0x42::a
    use 0x42::b; // resolved as: 0x42::b
    private fun foo(f: |(a::MyList, b::MyOtherList)|,x: a::MyList,y: b::MyOtherList) {
        (f)(x, y)
    }
    private fun test(x: a::MyList,y: b::MyOtherList) {
        c::foo(closure#0c::test$lambda$1(), x, y)
    }
    private fun test$lambda$1(x: a::MyList,y: b::MyOtherList) {
        if Eq<u64>(Add<u64>(a::len(Borrow(Immutable)(x)), b::len(Borrow(Immutable)(y))), 1) {
          Tuple()
        } else {
          Abort(1)
        }
    }
} // end 0x42::c

// -- Sourcified model before bytecode pipeline
module 0x42::a {
    struct MyList {
        len: u64,
    }
    public fun len(self: &MyList): u64 {
        self.len
    }
}
module 0x42::b {
    struct MyOtherList {
        len: u64,
    }
    public fun len(self: &MyOtherList): u64 {
        self.len
    }
}
module 0x42::c {
    use 0x42::a;
    use 0x42::b;
    fun foo(f: |(a::MyList, b::MyOtherList)|, x: a::MyList, y: b::MyOtherList) {
        f(x, y)
    }
    fun test(x: a::MyList, y: b::MyOtherList) {
        foo(|(arg0,arg1)| test$lambda$1(arg0, arg1), x, y)
    }
    fun test$lambda$1(x: a::MyList, y: b::MyOtherList) {
        if (a::len(&x) + b::len(&y) == 1) () else abort 1
    }
}


Diagnostics:
error: Calls to function values other than inline function parameters not yet implemented
   ┌─ tests/lambda/inline-parity/same_names.move:24:9
   │
24 │         f(x, y)
   │         ^^^^^^^

error: Function-typed values not yet implemented except as parameters to calls to inline functions
   ┌─ tests/lambda/inline-parity/same_names.move:30:13
   │
30 │         foo(|x, y| { assert!(x.len() + y.len() == 1, 1) }, x, y)
   │             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
